--- a/block-BJaaju/code/index.html
+++ b/block-BJaaju/code/index.html
@@ -13,7 +13,7 @@
     </header>
     <main>
       <input type="text" placeholder="Search Images" />
-      <div class="image"></div>
+      <ul class="image"></ul>
     </main>
     <script src="./index.js"></script>
   </body>
